--- a/React-cond-rendering/src/index.css
+++ b/React-cond-rendering/src/index.css
@@ -17,7 +17,7 @@
   border: 3px solid;
   border-radius: 10px;
   text-align: center;
-  background-color: rgb(189, 187, 187);
+  background-color:lightblue;
 }
 
 .list li:hover {
